--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "markdown_notes",
+  "name": "markdown-notes",
   "version": "0.1.0",
-  "homepage": "https://ylancy.github.io/markdown_notes",
+  "homepage": "https://ylancy.github.io/markdown-notes",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
